adding to webflow

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="/build/bundle.css" />
     <link rel="stylesheet" href="index.css" />
-    <link href="normalize.css" rel="stylesheet">
+    <!-- <link href="normalize.css" rel="stylesheet">
     <link href="webflow.css" rel="stylesheet">
-    <link href="timesheetbuilder.webflow.css" rel="stylesheet">
+    <link href="timesheetbuilder.webflow.css" rel="stylesheet"> -->
 
     <script defer src="/build/bundle.js"></script>
   </head>
